--- a/resume/index.html
+++ b/resume/index.html
@@ -1,8 +1,45 @@
-<html>
-<title>简历 - 宫湦 - 技术美术</title>
-<link rel="shortcut icon" href="/friends/icon.jpg">
-<body style="height: 100%; width: 100%; overflow: hidden; margin:0px; background-color: rgb(82, 86, 89);"><embed name="DC507414E67E02CC277F5FC1220F5E8F" style="position:absolute; left: 0; top: 0;" width="100%" height="100%" src="about:blank" type="application/pdf" internalid="DC507414E67E02CC277F5FC1220F5E8F"></body>
-	<embed name="DC507414E67E02CC277F5FC1220F5E8F" style="position:absolute; left: 0; top: 0;" width="100%" height="100%" src="简历-胡武强-技术美术.pdf" type="application/pdf" internalid="DC507414E67E02CC277F5FC1220F5E8F">
-	</embed>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    <title>简历 - 宫湦 - 技术美术</title>
+    <link rel="shortcut icon" href="/friends/icon.jpg">
+    <script>
+        // 自动在新标签页打开PDF
+        window.location.href = '/resume/简历-胡武强-技术美术.pdf';
+    </script>
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #f5f5f7;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+        }
+        .loading {
+            text-align: center;
+            color: #666;
+        }
+        .loading p {
+            margin: 16px 0;
+        }
+        .loading a {
+            color: #0071e3;
+            text-decoration: none;
+        }
+        .loading a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="loading">
+        <p>正在打开简历...</p>
+        <p>如果没有自动打开，<a href="/resume/简历-胡武强-技术美术.pdf" target="_blank">请点击这里</a></p>
+        <p><a href="/">返回主页</a></p>
+    </div>
 </body>
 </html>
