--- a/search/index.html
+++ b/search/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>搜索 - 宫湦</title>
-    <link rel="shortcut icon" href="/friends/icon.jpg">
+    <link rel="shortcut icon" href="/theme-img/icon.jpg">
     <script>
         // 跳转到首页并触发搜索弹窗
         sessionStorage.setItem('openSearch', 'true');
