--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-  <title>宫湦 - Technical Art</title>
+  <title>胡武强 - Technical Art</title>
   <link rel="shortcut icon" href="/theme-img/icon.jpg">
   <link rel='manifest' href='/manifest.json'>
   <link rel="stylesheet" href="/css/var.css">
@@ -22,26 +22,11 @@
         <div class="bg-slide" style="background-image: url('/theme-img/background3.jpg')"></div>
     </div>
 
-    <!-- 导航栏 -->
-    <nav id="theme-nav">
-        <div class="inner">
-            <a class="title" href="/">宫湦</a>
-            <div class="nav-arrow"></div>
-            <div class="nav-items">
-                <a class="nav-item nav-item-home" href="/">主页</a>
-                <a class="nav-item" href="/archives">文档</a>
-                <a class="nav-item" href="/demo">Demo</a>
-                <a class="nav-item" href="/about">关于我</a>
-                <a class="nav-item" href="/resume">简历</a>
-            </div>
-        </div>
-    </nav>
-
     <!-- 居中卡片 -->
     <div class="hero-card">
         <div class="card-content">
             <p class="card-subtitle">Technical Artist - Real-Time Rendering & Tools</p>
-            <h1 class="card-title">宫湦</h1>
+            <h1 class="card-title">胡武强</h1>
             <div class="card-info">
                 <p class="card-links">
                     <a href="/demo">Demo Projects</a> | <a href="/archives">Technical Articles</a>
