--- a/search/index.html
+++ b/search/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>搜索 - 宫湦</title>
+    <title>搜索 - 胡武强</title>
     <link rel="shortcut icon" href="/theme-img/icon.jpg">
     <script>
         // 跳转到首页并触发搜索弹窗
