--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <title>Demo - 宫湦 - Technical Art</title>
+    <title>Demo - 胡武强 - Technical Art</title>
     <link rel="shortcut icon" href="/theme-img/icon.jpg">
     
     <link rel="stylesheet" href="/css/var.css">
